--- a/index.html
+++ b/index.html
@@ -326,6 +326,14 @@
                             <div class="feature feature-8"> <img alt="Ahmad Syarif, Founder and CEO at CyberLabs" src="img/foto-syarif.jpg" class="rounded-circle">
                                 <h5>Ahmad Syarif</h5> <span>Founder and CEO at CyberLabs</span> </div>
                         </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Irwansyah Alfarras, Founder and CEO at CyberLabs" src="img/foto-irwansyah.jpg" class="rounded-circle">
+                                <h5>Irwansyah Alfarras</h5> <span>Owner at Puntang Coffee</span> </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="feature feature-8"> <img alt="Ahmad Oriza, Co-founder & CTO at CodePolitan" src="img/foto-oriza.png" class="rounded-circle">
+                                <h5>Ahmad Oriza</h5> <span>Co-founder & CTO at CodePolitan</span> </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -336,32 +344,41 @@
                         <h2 class="mt-0 mb-2 text-center">Dokumentasi Pembangunan Pesantren</h2>
                         <p class="lead mb-5 text-center">Berikut ini beberapa dokumentasi pembangunan Pesantren IT dan Tahfidz Madrasah Digital</p>
                         <div class="masonry__container row masonry--active">
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-1.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-1.jpg"> </a>
                             </div>
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-2.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-2.jpg"> </a>
                             </div>
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-3.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-3.jpg"> </a>
                             </div>
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-4.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-4.jpg"> </a>
                             </div>
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-5.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-5.jpg"> </a>
                             </div>
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-6.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-6.jpg"> </a>
                             </div>
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-7.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-7.jpg"> </a>
                             </div>
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
+                                <a href="img/img-pembangunan-11.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-11.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-8.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-8.jpg"> </a>
                             </div>
-                            <div class="masonry__item col-lg-4 col-6 filter-people">
+                            <div class="masonry__item col-md-4 filter-people">
                                 <a href="img/img-pembangunan-9.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-9.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-md-4 filter-people">
+                                <a href="img/img-pembangunan-10.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-10.jpg"> </a>
+                            </div>
+                            <div class="masonry__item col-md-4 filter-people">
+                                <a href="img/img-pembangunan-12.jpg" data-lightbox="Gallery 1"> <img alt="Image" src="img/img-pembangunan-12.jpg"> </a>
                             </div>
                         </div>
                     </div>
@@ -386,7 +403,7 @@
                                     <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
                                 </ul>
-                                <a class="btn btn--primary" href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%2C%0A%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20berpartisipasi%20dalam%20program%20*Patungan%20Bangun%20Pesantren%20IT%20dan%20Tahfidz%2C%20Madrasah%20Digital*.%0A%0ASaya%20ingin%20bergabung%20dengan%20paket%20*KHOIR%20Rp%2050.000*%0A%0ATerima%20kasih"> <span class="btn__text">PATUNGAN PAKET INI</span> </a>
+                                <a class="btn btn--primary" href="https://madrasahdigital.orderonline.id/paket-khoir"> <span class="btn__text">PATUNGAN PAKET INI</span> </a>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -399,7 +416,7 @@
                                     <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
                                 </ul>
-                                <a class="btn btn--primary-1" href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%2C%0A%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20berpartisipasi%20dalam%20program%20*Patungan%20Bangun%20Pesantren%20IT%20dan%20Tahfidz%2C%20Madrasah%20Digital*.%0A%0ASaya%20ingin%20bergabung%20dengan%20paket%20*AHSAN%20Rp%20100.000*%0A%0ATerima%20kasih"> <span class="btn__text">
+                                <a class="btn btn--primary-1" href="https://madrasahdigital.orderonline.id/paket-ahsan"> <span class="btn__text">
                             PATUNGAN PAKET INI
                         </span> </a>
                             </div>
@@ -415,20 +432,43 @@
                                     <li><span class="checkmark bg--primary-1"></span><span>Sertifikat Digital Patungan</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Newsletter Progress Pembangunan</span></li>
                                 </ul>
-                                <a class="btn btn--primary" href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%2C%0A%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20berpartisipasi%20dalam%20program%20*Patungan%20Bangun%20Pesantren%20IT%20dan%20Tahfidz%2C%20Madrasah%20Digital*.%0A%0ASaya%20ingin%20bergabung%20dengan%20paket%20*BAROKAH%20Rp%20200.000*%0A%0ATerima%20kasih"> <span class="btn__text">
+                                <a class="btn btn--primary" href="https://madrasahdigital.orderonline.id/paket-barokah"> <span class="btn__text">
                             PATUNGAN PAKET INI
                         </span> </a>
                             </div>
                         </div>
                     </div>
 
-                    <p class="lead mb-5 text-center">CATATAN: Bonus akan dikirimkan setiap akhir bulan secara serempak. Mohon bersabar.</p>
+                    <p class="lead mb-5 text-center"><span class="color--error">CATATAN: Bonus akan dikirimkan pada tanggal 18 November 2019 secara serempak. Mohon bersabar.</span></p>
+                </div>
+            </section>
+
+            <section class="switchable feature-large switchable--switch bg--secondary">
+                <div class="container">
+                    <div class="row text-center justify-content-center">
+                        <div class="col-md-10 col-lg-10">
+                            <h2>Desain Bonus Patungan</h2>
+                            <p class="lead mb-5">
+                                Berikut ini design bonus yang akan diberikan.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row justify-content-around">
+                        <div class="col-md-6"> 
+                            <img alt="Image" class="border--round box-shadow-wide" src="img/img-totebag.jpg">
+                            <div class="text-center">Desain Bonus Tote Bag Madrasah Digital</div> 
+                        </div>
+                        <div class="col-md-6"> 
+                            <img alt="Image" class="border--round box-shadow-wide" src="img/img-tshirt.jpg"> 
+                            <div class="text-center">Desain Bonus Kaos Madrasah Digital</div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
             <section class="text-center space--sm bg--dark">
                 <div class="container">
-                    <h3>Apakah kamu punya pertanyaan terkait Program Patungan Pesantren ini?</h3>
+                    <h3>Apakah kamu punya pertanyaan terkait Program Patungan Pesantren ini? Atau ingin patungan dengan nominal di luar paket yang tersedia?</h3>
                     <a href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%2C%0A%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20bertanya%20seputar%20pembangunan%20Pesantren%20IT%20dan%20Tahfidz%20Madrasah%20DIgital.%0A%0APertanyaan%20saya%20%3A%20" target="_blank"><img alt="Tombol WhatsApp" src="img/button-wa.png"></a>
                 </div>
             </section>
