--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="col-md-8 col-lg-8">
                             <h1><b>Wakaf Pembebasan Lahan Pesantren IT dan Tahfidz Madrasah Digital</b></h1>
                             <p class="lead">Bantu kami membebaskan lahan seluas 1.800 m<sup>2</sup> untuk pembangunan Pondok Pesantren IT dan Tahfidz Madrasah Digital di Bekasi</p>
-                            <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
+                            <a class="btn btn--primary type--uppercase" href="#wakaf"> <span class="btn__text">
                         BERWAKAF SEKARANG</span> </a>
                         </div>
                         <div class="col-md-12">
@@ -312,7 +312,7 @@
             </section>
 
 
-            <section class="bg--primary">
+            <section class="bg--primary" id="wakaf">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-8">
