--- a/index.html
+++ b/index.html
@@ -374,6 +374,21 @@
             </section>
 
 
+            <section class="">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8">
+                            <h2 class="type--bold">Hubungi Kami</h2>
+
+                            <p class="lead">Untuk informasi lebih lanjut terkait program Pesantren IT dan Tahfidz Madrasah Digital, kamu bisa menghubungi kami melalui WhatsApp di nomor <strong>089991292200</strong> atau dengan cara klik tombol berikut:</p>
+
+                            <p><a href="https://api.whatsapp.com/send?phone=628999129220&text=Assalamualaikum%2C%0A%0APerkenalkan%0ANama%20%3A%0AAlamat%20%3A%0A%0ASaya%20ingin%20bertanya%20terkait%20program%20Pesantren%20IT%20dan%20Tahfidz%20Madrasah%20Digital.%0A%0ABerikut%20ini%20pertanyaan%20saya%3A%0A%0A"><img src="assets/img/button-wa.png"></a></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
         
         <script src="assets/js/jquery-3.1.1.min.js"></script>
         <script src="assets/js/parallax.js"></script>
