--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Wakaf Pembebasan Lahan Pesantren IT dan Tahfidz Madrasah Digital</title>
+        <title>Wakaf Pembebasan Lahan Pesantren IT dan Tahfidz Gratis</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="assets/img/icon/apple-icon-60x60.png">
@@ -105,7 +105,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-8 col-lg-8">
-                            <h1><b>Wakaf Pembebasan Lahan Pesantren IT dan Tahfidz Madrasah Digital</b></h1>
+                            <h1><b>Wakaf Pembebasan Lahan Pesantren IT dan Tahfidz Gratis</b></h1>
                             <p class="lead">Bantu kami membebaskan lahan seluas 1.800 m<sup>2</sup> untuk pembangunan Pondok Pesantren IT dan Tahfidz Madrasah Digital di Bekasi</p>
                             <a class="btn btn--primary type--uppercase" href="#wakaf"> <span class="btn__text">
                         BERWAKAF SEKARANG</span> </a>
@@ -125,11 +125,11 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-9">
-                            <h4 class="text-center h3">Dana Terkumpul <span class="color--primary type--bold">Rp 43.000.000</span> dari Rp 360.000.000</h4>
+                            <h4 class="text-center h3">Dana Terkumpul <span class="color--primary type--bold">Rp 45.600.000</span> dari Rp 360.000.000</h4>
 
                             <div class="progress-horizontal progress-horizontal--lg">
                               <div class="progress-horizontal__bar" data-value="9.2"></div>
-                              <span class="progress-horizontal__label h5 text-center">Progress: 11,95% dana terkumpul</span>
+                              <span class="progress-horizontal__label h5 text-center">Progress: 12,7% dana terkumpul</span>
                             </div>
 
                         </div>
