--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>sApp - App Landing Page | Homepage-4</title>
+    <title>Madrasah Digital, Belajar Islam Secara Online dengan Kurikulum</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="assets/img/favicon.png">
@@ -33,8 +33,8 @@
         <header class="navbar navbar-sticky navbar-expand-lg navbar-dark">
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
-                    <img class="navbar-brand-regular" src="assets/img/logo/logo-white.png" alt="brand-logo">
-                    <img class="navbar-brand-sticky" src="assets/img/logo/logo.png" alt="sticky brand-logo">
+                    <img class="navbar-brand-regular" src="assets/img/logo/logo-md-white.png" alt="brand-logo">
+                    <img class="navbar-brand-sticky" src="assets/img/logo/logo-md-green.png" alt="sticky brand-logo">
                 </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -184,19 +184,19 @@
                     <!-- Welcome Intro Start -->
                     <div class="col-12 col-md-6 order-1 order-md-2">
                         <div class="welcome-intro px-0 px-lg-4">
-                            <h1 class="text-white font-italic mb-2 mb-md-3">sApp</h1>
-                            <h3 class="text-white text-capitalize">Premium App Landing page</h3>
+                            <h1 class="text-white h2 font-italic mb-2 mb-md-3">Madrasah Digital</h1>
+                            <h3 class="text-white text-capitalize">Belajar Islam Tematik Secara Online dengan Kurikulum</h3>
                             <p class="text-white mt-3 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nihil tenetur minus quidem est deserunt molestias accusamus harum ullam tempore debitis et, expedita, repellat delectus aspernatur neque itaque qui quod.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
                                 <a href="#">
                                     <img src="assets/img/icon/google-play.png" alt="">
                                 </a>
-                                <a href="#">
+                                <!--<a href="#">
                                     <img src="assets/img/icon/app-store.png" alt="">
-                                </a>
+                                </a>-->
                             </div>
-                            <span class="d-inline-block text-white fw-3 font-italic mt-3">* Available on iPhone, iPad and all Android devices</span>
+                            <!--<span class="d-inline-block text-white fw-3 font-italic mt-3">* Available on iPhone, iPad and all Android devices</span>-->
                         </div>
                     </div>
                 </div>
