--- a/index.html
+++ b/index.html
@@ -47,122 +47,20 @@
                     </button>
                     <nav>
                         <ul class="navbar-nav" id="navbar-nav">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="javascript:;" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Home
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <li>
-                                        <a class="dropdown-item" href="index.html">Homepage-1</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="index-2.html">Homepage-2</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="index-3.html">Homepage-3</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="index-4.html">Homepage-4</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="index-5.html">Homepage-5</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="index-6.html">Homepage-6</a>
-                                    </li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link scroll" href="#features">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#features">Features</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="javascript:;" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Pages
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="javascript:;">Inner Pages<span class="badge badge-pill badge-warning ml-2">New</span></a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a class="dropdown-item" href="pricing.html">Pricing</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="download.html">Download</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="newsletter.html">Newsletter</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="thank-you.html">Thank you</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="coming-soon.html">Coming Soon</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="404.html">404</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="javascript:;">Blog Pages</a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a class="dropdown-item" href="blog-two-column.html">Blog- 2 Column</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="blog-three-column.html">Blog- 3 Column</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="blog-left-sidebar.html">Blog- Left Sidebar</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="blog-right-sidebar.html">Blog- Right Sidebar</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="javascript:;">Blog Details</a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a class="dropdown-item" href="blog-details-left-sidebar.html">Blog Details- Left Sidebar</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="blog-details-right-sidebar.html">Blog Details- Right Sidebar</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="javascript:;">Accounts<span class="badge badge-pill badge-warning ml-2">New</span></a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <a class="dropdown-item" href="login.html">Login</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="signup.html">Signup</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" href="forgot.html">Reset Password</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="reviews.html">Reviews</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="faq.html">FAQ</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="contact.html">Contact</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item disabled" href="#">More Coming Soon</a>
-                                    </li>
-                                </ul>
+                                <a class="nav-link scroll" href="#pricing">Tentang Aplikasi</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#screenshots">Screenshots</a>
+                                <a class="nav-link scroll" href="#pricing">Kelas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#pricing">Pricing</a>
+                                <a class="nav-link scroll" href="#pricing">Unduh</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#contact">Contact</a>
+                                <a class="nav-link scroll" href="#contact">Hubungi Kami</a>
                             </li>
                         </ul>
                     </nav>
@@ -178,20 +76,21 @@
                     <div class="col-12 col-md-6 order-2 order-md-1">
                         <!-- Welcome Thumb -->
                         <div class="welcome-thumb mx-auto">
-                            <img src="assets/img/welcome/welcome-mockup-2.png" alt="">
+                            <img src="assets/img/welcome/sample-jumbotron.png" alt="">
                         </div>
                     </div>
                     <!-- Welcome Intro Start -->
                     <div class="col-12 col-md-6 order-1 order-md-2">
                         <div class="welcome-intro px-0 px-lg-4">
-                            <h1 class="text-white h2 font-italic mb-2 mb-md-3">Madrasah Digital</h1>
-                            <h3 class="text-white text-capitalize">Belajar Islam Tematik Secara Online dengan Kurikulum</h3>
-                            <p class="text-white mt-3 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nihil tenetur minus quidem est deserunt molestias accusamus harum ullam tempore debitis et, expedita, repellat delectus aspernatur neque itaque qui quod.</p>
+                            <h1 class="text-white font-italic mb-2 mb-md-3">Madrasah Digital</h1>
+                            <h3 class="text-white lead text-capitalize">Belajar Agama Islam Online Secara Tematik Semudah Bermain Gadget Melalui Aplikasi Android Madrasah Digital</h3>
+                            <!--<p class="text-white mt-3 mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit nihil tenetur minus quidem est deserunt molestias accusamus harum ullam tempore debitis et, expedita, repellat delectus aspernatur neque itaque qui quod.</p>-->
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
-                                <a href="#">
+                                <a href="#" class="btn sApp-btn mt-4">Unduh Sekarang</a>
+                                <!--<a href="#">
                                     <img src="assets/img/icon/google-play.png" alt="">
-                                </a>
+                                </a>-->
                                 <!--<a href="#">
                                     <img src="assets/img/icon/app-store.png" alt="">
                                 </a>-->
@@ -211,7 +110,7 @@
                     <div class="col-12 col-lg-6 order-2 order-lg-1">
                         <!-- Service Text -->
                         <div class="service-text pt-5 pt-lg-0 px-0 px-lg-4">
-                            <h2 class="text-capitalize mb-4">Organize all your media content easily</h2>
+                            <h2 class="text-capitalize mb-4">Belajar Agama Lebih Terarah</h2>
                             <!-- Service List -->
                             <ul class="service-list style-two">
                                 <!-- Single Service -->
@@ -239,7 +138,6 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a href="#" class="btn sApp-btn mt-4">Learn More</a>
                         </div>
                     </div>
                     <div class="col-12 col-md-8 col-lg-6 order-1 order-lg-2">
@@ -266,7 +164,7 @@
                     <div class="col-12 col-lg-6 order-1 order-lg-2">
                         <!-- Discover Text -->
                         <div class="discover-text pt-4 pt-lg-0 px-0 px-lg-4">
-                            <h2 class="pb-4">Work faster with powerful filters</h2>
+                            <h2 class="pb-4">Online Mentoring Mingguan</h2>
                             <!-- Service List -->
                             <ul class="service-list style-two">
                                 <!-- Single Service -->
@@ -406,7 +304,7 @@
                     <div class="col-12 col-md-10 col-lg-8">
                         <!-- Work Content -->
                         <div class="work-content text-center">
-                            <h2 class="text-white">How sApp works?</h2>
+                            <h2 class="text-white">Bagaimana Cara Belajarnya?</h2>
                             <p class="d-none d-sm-block text-white my-3 mt-sm-4 mb-sm-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati dignissimos quae quo ad iste ipsum officiis deleniti asperiores sit.</p>
                             <p class="d-block d-sm-none text-white my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati.</p>
                         </div>
@@ -420,7 +318,7 @@
                             <div class="work-icon">
                                 <img class="avatar-md" src="assets/img/icon/work/download.png" alt="">
                             </div>
-                            <h3 class="text-white py-3">Install the App</h3>
+                            <h3 class="text-white py-3">Instal Aplikasi</h3>
                             <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius saepe, voluptates quis enim incidunt obcaecati?</p>
                         </div>
                     </div>
@@ -431,7 +329,7 @@
                             <div class="work-icon">
                                 <img class="avatar-md" src="assets/img/icon/work/settings.png" alt="">
                             </div>
-                            <h3 class="text-white py-3">Setup your profile</h3>
+                            <h3 class="text-white py-3">Pilih Kelas</h3>
                             <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius saepe, voluptates quis enim incidunt obcaecati?</p>
                         </div>
                     </div>
@@ -442,7 +340,7 @@
                             <div class="work-icon">
                                 <img class="avatar-md" src="assets/img/icon/work/app.png" alt="">
                             </div>
-                            <h3 class="text-white py-3">Enjoy the features!</h3>
+                            <h3 class="text-white py-3">Mulai Belajar</h3>
                             <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius saepe, voluptates quis enim incidunt obcaecati?</p>
                         </div>
                     </div>
@@ -458,7 +356,7 @@
                     <div class="col-12 col-md-10 col-lg-8">
                         <!-- Section Heading -->
                         <div class="section-heading text-center">
-                            <h2 class="text-capitalize">Simple &amp; Beautiful Interface</h2>
+                            <h2 class="text-capitalize">Pilihan Kelas yang Bisa Dipelajari</h2>
                             <p class="d-none d-sm-block mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati dignissimos quae quo ad iste ipsum officiis deleniti asperiores sit.</p>
                             <p class="d-block d-sm-none mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati.</p>
                         </div>
