--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-10 col-md-10">
                             <div class="mt--0">
-                                <h1 class="type--bold mt-0"> Pesantren IT dan Tahfidz Al-Qur’an </h1>
-                                <p class="lead"> Membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an </p>
+                                <h1 class="type--bold text--color-madrasah-dark"> Pesantren IT dan Tahfidz Al-Qur’an </h1>
+                                <p class="lead mb-5"> Membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an </p>
                                 <a class="btn btn--primary type--uppercase" href="#customise-template"> <span class="btn__text">
 							Pendaftaran Santri</span> </a> <a class="btn btn--primary-1 type--uppercase" href="#customise-template"> <span class="btn__text">
                             Donasi & Dukungan</span> </a> <span class="block type--fine-print">atau <a href="index.html">lihat program pesantren</a></span> </div>
@@ -71,27 +71,27 @@
                     </div>
                 </div>
             </section>
-            <section class="imageblock switchable feature-large switchable--switch bg--primary space--sm">
+            <section class="imageblock switchable feature-large switchable--switch bg--primary bg--primary-madrasah space--sm">
                 <div class="imageblock__content col-lg-6 col-md-4 pos-right">
                     <div class="background-image-holder"> <img alt="image" src="assets/images/pesantren-it-tahfidz-1.jpg"> </div>
                 </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
-                            <h2 class="type--bold">Siang Belajar IT dan Bisnis</h2>
+                            <h2 class="type--bold"><span class="text--color-madrasah-yellow">Siang</span> Belajar IT dan Bisnis</h2>
                             <p class="lead"> Stack offers a clean and contemporary to suit a range of purposes from corporate, tech startup, marketing site to digital storefront. Elements have been designed to showcase content in a diverse yet consistent manner. </p>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="imageblock switchable feature-large bg--dark space--sm">
+            <section class="imageblock switchable feature-large bg--dark bg--dark-madrasah space--sm">
                 <div class="imageblock__content col-lg-6 col-md-4 pos-right">
                     <div class="background-image-holder"> <img alt="image" src="assets/images/pesantren-it-tahfidz-2.jpg"> </div>
                 </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-5 col-md-7">
-                            <h2 class="type--bold">Malam Belajar Agama dan Menghafal Al-Qur’an</h2>
+                            <h2 class="type--bold"><span class="text--color-madrasah-yellow">Malam</span> Belajar Agama dan Menghafal Al-Qur’an</h2>
                             <p class="lead"> Stack offers a clean and contemporary to suit a range of purposes from corporate, tech startup, marketing site to digital storefront. Elements have been designed to showcase content in a diverse yet consistent manner. </p>
                         </div>
                     </div>
@@ -232,7 +232,7 @@
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-lg-6 col-md-7 col-12">
-                            <div class="map-container"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.872896911966!2d144.9690257159672!3d-37.79301837975606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad64328bc401a11%3A0xba0f243a742656b1!2sRathdowne+St%2C+Victoria!5e0!3m2!1sen!2sau!4v1485815785982"></iframe> </div>
+                            <div class="map-container"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.90995342969!2d107.15903451458927!3d-6.1427968619283435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6987544cf3a303%3A0x56a4c09f018b6e35!2sMadrasah%20Digital!5e0!3m2!1sen!2sid!4v1621933857251!5m2!1sen!2sid" style="border:0;" allowfullscreen="" loading="lazy"></iframe> </div>
                         </div>
                         <div class="col-lg-5 col-md-5">
                             <div class="switchable__text">
