--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
             </section>
             <section class="text-center">
                 <div class="container">
+                    <h2 class="type--bold mb-3">Program Madrasah Digital</h2>
+                    <p class="lead mb-5"> Dengarkan apa kata mereka tentang program Madrasah Digital </p>
+
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
                             <div class="text-block"> <i class="icon icon--lg icon-Mail-3 color--dark"></i>
@@ -146,9 +149,9 @@
             <section class="switchable feature-large bg--secondary switchable--switch">
                 <div class="container">
                     <div class="row justify-content-around">
-                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/img/landing-11.jpg"> </div>
+                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/madrasah-digital-view.jpg"> </div>
                         <div class="col-md-6 col-lg-5">
-                            <div class="switchable__text">
+                            <div class="switchable__text mt-0">
                                 <h2 class="type--bold">Apa itu Madrasah Digital?</h2>
                                 <p class="lead"> Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri. </p> 
                                 <a class="btn" href="#">
@@ -171,32 +174,26 @@
             </section>
             <section class="text-center bg--secondary">
                 <div class="container">
-                    <div class="row">
+                    <h2 class="type--bold mb-3">Karya Madrasah Digital</h2>
+                    <p class="lead mb-5"> Karya-karya yang telah diciptakan dalam program Madrasah Digital </p>
+
+                    <div class="row justify-content-center">
                         <div class="col-md-4">
                             <div class="feature feature-1"> <img alt="Image" src="assets/img/cowork-1.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
-                                    <h3>Built for teams</h3>
-                                    <p class="lead"> Save time with a multitude of styled components designed to showcase your content </p> <a href="#">
-                            Learn More
-                        </a> </div>
+                                    <h3>67Benda</h3>
+                                    <p class="lead"> Save time with a multitude of styled components designed to showcase your content </p> <a class="btn" href="#">
+                                    <span class="btn__text">Lihat detail</span>
+                                </a> </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="feature feature-1"> <img alt="Image" src="assets/img/landing-1.jpg">
                                 <div class="feature__body boxed boxed--lg boxed--border">
-                                    <h3>Modern Aesthetic</h3>
-                                    <p class="lead"> Save time with a multitude of styled components designed to showcase your content </p> <a href="#">
-                            Learn More
-                        </a> </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="feature feature-1"> <img alt="Image" src="assets/img/inner-6.jpg">
-                                <div class="feature__body boxed boxed--lg boxed--border">
-                                    <h3>Beautiful Markup</h3>
-                                    <p class="lead"> Save time with a multitude of styled components designed to showcase your content </p> <a href="#">
-                            Learn More
-                        </a> </div>
+                                    <h3>Dirosah</h3>
+                                    <p class="lead"> Save time with a multitude of styled components designed to showcase your content </p> <a class="btn" href="#">
+                                    <span class="btn__text">Lihat detail</span>
+                                </a> </div>
                             </div>
                         </div>
                     </div>
@@ -204,6 +201,9 @@
             </section>
             <section class="text-center">
                 <div class="container">
+                    <h2 class="type--bold mb-3">Kata Mereka tentang Madrasah Digital</h2>
+                    <p class="lead mb-5"> Dengarkan apa kata mereka tentang program Madrasah Digital </p>
+
                     <div class="row">
                         <div class="col-md-12 col-lg-10">
                             <div class="video-cover border--round">
@@ -215,13 +215,13 @@
             <section class="switchable feature-large bg--secondary">
                 <div class="container">
                     <div class="row justify-content-around">
-                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/img/landing-11.jpg"> </div>
+                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/dokumentasi-pembangunan-pesantren.jpg"> </div>
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text">
-                                <h2 class="type--bold">Dokumentasi Pembangunan</h2>
-                                <p class="lead"> Launching an attractive and scalable website quickly and affordably is important for modern startups — Stack offers massive value without looking 'bargain-bin'. </p> 
-                                <a class="btn" href="#">
-                                    <span class="btn__text">Lihat Dokumentasi Lengkap</span>
+                                <h2 class="type--bold">Dokumentasi Lengkap Pembangunan Pesantren</h2>
+                                <p class="lead"> Sekecil apapun proses pembangunan pesantren selalu kami dokumentasikan untuk memberikan transparansi penggunaan dana yang telah dititipkan oleh para donatur. </p> 
+                                <a class="btn" href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">
+                                    <span class="btn__text">Lihat dokumentasi lengkap</span>
                                 </a>
                                  </div>
                         </div>
