--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-3 col-md-2">
-                                <a href="index.html"> <img class="logo logo-dark" alt="logo" src="assets/img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="assets/img/logo-light.png"> </a>
+                                <a href="index.html"> <img class="logo logo-dark" alt="logo" src="assets/images/logo-madrasah.png"> <img class="logo logo-light" alt="logo" src="assets/img/logo-md.png"> </a>
                             </div>
                             <div class="col-9 col-md-10 text-right">
                                 <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
@@ -29,12 +29,12 @@
                         </div>
                     </div>
                 </div>
-                <nav id="menu1" class="bar bar-1 hidden-xs">
+                <nav id="menu1" class="bar bar-1 hidden-xs pb-2">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-1 col-md-2 hidden-xs">
                                 <div class="bar__module">
-                                    <a href="index.html"> <img class="logo logo-dark" alt="logo" src="assets/img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="assets/img/logo-light.png"> </a>
+                                    <a href="index.html"> <img class="logo logo-dark logo-madrasah" alt="logo" src="assets/images/logo-madrasah.png"> <img class="logo logo-light logo-madrasah" alt="logo" src="assets/img/logo-md.png"> </a>
                                 </div>
                             </div>
                             <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="main-container">
-            <section class="switchable bg--secondary switchable--switch">
+            <section class="switchable switchable--switch">
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-lg-10 col-md-10">
@@ -105,7 +105,7 @@
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
                             <div class="text-block"> <i class="icon icon--lg icon-Mail-3 color--dark"></i>
-                                <h4>Mailer Integrations</h4>
+                                <h4>Gratis</h4>
                                 <p> for marketing campaigns </p>
                             </div>
                             <div class="text-block"> <i class="icon icon--lg icon-Mail-3 color--dark"></i>
@@ -238,7 +238,7 @@
                             <div class="switchable__text">
                                 <h3 class="type--bold">Alamat Madrasah Digital</h3>
                                 <p class="lead"> Kp. Gaga RT. 001 RW. 002, Desa Sukamantri, Kecamatan Tambelang, Kabupaten Bekasi, Jawa Barat, Indonesia </p>
-                                <p class="lead"> E: <a href="#">info@madrasahdigital.com</a><br> P: +62 8999 129 220 </p>
+                                <p class="lead"> E: <a href="#">info@madrasahdigital.id</a><br> P: +62 8999 129 220 </p>
                             </div>
                         </div>
                     </div>
@@ -247,11 +247,11 @@
             <footer class="footer-3 text-center-xs space--xs">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-6"> <img alt="Image" class="logo" src="assets/img/logo-dark.png">
-                            <ul class="list-inline list--hover">
+                        <div class="col-sm-6"> <img alt="Image" class="logo logo-madrasah" src="assets/images/logo-madrasah.png">
+                            <!--<ul class="list-inline list--hover">
                                 <li> <a href="#"><span class="type--fine-print">Get Started</span></a> </li>
                                 <li> <a href="#"><span class="type--fine-print">help@stack.io</span></a> </li>
-                            </ul>
+                            </ul>-->
                         </div>
                         <div class="col-sm-6 text-right text-center-xs">
                             <ul class="social-list list-inline list--hover">
@@ -263,10 +263,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-6">
-                            <p class="type--fine-print"> Supercharge your web workflow </p>
-                        </div>
-                        <div class="col-sm-6 text-right text-center-xs"> <span class="type--fine-print">© <span class="update-year"></span> Stack Inc.</span> <a class="type--fine-print" href="#">Privacy Policy</a> <a class="type--fine-print" href="#">Legal</a> </div>
+                        <div class="col-sm-6"> <span class="type--fine-print">© <span class="update-year"></span> Madrasah Digital. All rights reserved</span> <!--<a class="type--fine-print" href="#">Privacy Policy</a> <a class="type--fine-print" href="#">Legal</a> --></div>
                     </div>
                 </div>
             </footer>
