Perbaharui meta data dan og image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,49 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital</title>
+
+        <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="assets/img/icon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="assets/img/icon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="assets/img/icon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="assets/img/icon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="assets/img/icon/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="assets/img/icon/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="assets/img/icon/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/icon/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="assets/img/icon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icon/favicon-16x16.png">
+        <link rel="manifest" href="assets/img/icon/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="assets/img/icon/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
+
+        <!-- META -->
+        <link rel="canonical" href="https://www.madrasahdigital.id/">
+        <meta property="og:locale" content="id_ID">
+        <meta property="og:type" content="article">
+        <meta property="og:title" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital">
+        <meta property="og:description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
+        <meta property="og:url" content="">
+        <meta property="og:site_name" content="https://www.madrasahdigital.id/">
+        <meta property="article:publisher" content="https://www.facebook.com/madrasahdigital.id/">
+        <meta property="og:image" content="assets/images/og-image-madrasah.jpg">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="627">
+
+        <meta name="description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
+        <meta property="description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
+        <meta property="language" content="Indonesia">
+        <meta property="revisit-after" content="7">
+        <meta property="rating" content="general">
+
+        <meta property="webcrawlers" content="all">
+        <meta property="spiders" content="all">
+        <meta property="robots" content="all">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="assets/css/stack-interface.css" rel="stylesheet" type="text/css" media="all">
         <link href="assets/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
