--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <section class="switchable feature-large bg--secondary">
                 <div class="container">
                     <div class="row justify-content-around">
-                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/dokumentasi-pembangunan-pesantren.jpg"> </div>
+                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/dokumentasi-pembangunan-pesantren-with-logo.jpg"> </div>
                         <div class="col-md-6 col-lg-5">
                             <div class="switchable__text">
                                 <h2 class="type--bold">Dokumentasi Lengkap Pembangunan Pesantren</h2>
@@ -270,7 +270,21 @@
                     </div>
                 </div>
             </section>
-            <section class="switchable switchable--switch">
+            <section class="space--sm text-center">
+                <div class="container">
+                    <h2 class="type--bold mb-3">Mitra Madrasah Digital</h2>
+                    <p class="lead mb-5">Kami telah berkolaborasi dengan berbagai pihak untuk saling menguatkan</p>
+
+                    <div class="kampus-wrapper text-center">
+                        <a href="https://www.codepolitan.com/" target="_blank"><img alt="Partner Madrasah Digital - Codepolitan" class="d-inline-block mx-5 mb-4" src="assets/images/logo-codepolitan.png"></a>
+                        <a href="https://persis.or.id/" target="_blank"><img alt="Partner Madrasah Digital - Pemuda Persatuan Islam" class="d-inline-block mx-5 mb-4" src="assets/images/logo-pemudapersis.png"></a>
+                        <a href="https://www.instagram.com/pecinta_quran/" target="_blank"><img alt="Partner Madrasah Digital - Pecinta Quran" class="d-inline-block mx-5 mb-4" src="assets/images/logo-pecintaquran.png"></a>
+                    </div>
+
+                    <a class="btn type--uppercase mt-5" href="https://forms.gle/JX4E6tx9WeUXaWnz8" target="_blank"><span class="btn__text">Gabung Sebagai Mitra</span></a>
+                </div>
+            </section>
+            <section class="switchable switchable--switch bg--secondary">
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-lg-6 col-md-7 col-12">
@@ -295,7 +309,15 @@
                                 <li> <a href="#"><span class="type--fine-print">help@stack.io</span></a> </li>
                             </ul>-->
                         </div>
-                        <div class="col-sm-6 text-right text-center-xs">
+                        <div class="col-sm-6 text-right text-center visible-xs">
+                            <ul class="social-list list-inline list--hover">
+                                <li><a href="#"><i class="socicon socicon-google icon icon--xs"></i></a></li>
+                                <li><a href="#"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
+                                <li><a href="#"><i class="socicon socicon-facebook icon icon--xs"></i></a></li>
+                                <li><a href="#"><i class="socicon socicon-instagram icon icon--xs"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6 text-right text-right hidden-xs">
                             <ul class="social-list list-inline list--hover">
                                 <li><a href="#"><i class="socicon socicon-google icon icon--xs"></i></a></li>
                                 <li><a href="#"><i class="socicon socicon-twitter icon icon--xs"></i></a></li>
